--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="EstiloIndice.css">
+    <title>Index</title>
 </head>
 <body>
     <h1 style="text-align: center;">Trabajo practico</h1>
     <ul>
         <li><a href="Eje1/Eje1.html">Ejercicio 1</a></li>
         <li><a href="Eje2/index.html">Ejercicio 2</a></li>
+        <li><a href="Eje3/Index.html">Ejercicio 3</a</li>
+        <li><a href="Eje4/index.html">Ejercicio 4</a></li>
+        <li><a href="Eje5/Index.html">Ejercicio 5</a></li>
+        <li><a href="Eje6/Index.html">Ejercicio 6</a></li>
     </ul>
 </body>
 </html>
