Modificar Index a index

--- a/Eje1/Eje1.html
+++ b/Eje1/Eje1.html
@@ -6,7 +6,7 @@
     <title>Ejercicio 1</title>
 </head>
 <body>
-    <a href="../Index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
+    <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
     <h1 class="TextoRojo">Titulo 1</h1>
     <h2>SubTitulo</h2>
     <h3 class="TextoRojo">Sub-SubTitulo</h3>
