--- a/Eje2/index.html
+++ b/Eje2/index.html
@@ -6,7 +6,7 @@
     <title>Ejercicio 2</title>
 </head>
 <body>
-    <a href="../Index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
+    <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
     <h1>Titulo</h1>
     <p>Esto es un parrafo</p>
 </body>
