--- a/Eje3/Index.html
+++ b/Eje3/Index.html
@@ -8,7 +8,7 @@
     <title>Ejercicio 3</title>
 </head>
 <body>
-    <a href="../Index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
+    <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
     <h1>Esto es un titulo</h1>
     <p>Esto es un parrado</p>
 </body>
