--- a/Eje4/index.html
+++ b/Eje4/index.html
@@ -8,7 +8,7 @@
     <title>Ejercicio 4</title>
 </head>
 <body>
-    <a href="../Index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
+    <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
     <h1>h1</h1>
     <h2>h2</h2>
     <h3>h3</h3>
