--- a/Eje5/Index.html
+++ b/Eje5/Index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <a href="../Index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
+        <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
         <a href="index2.html" style="float: right;">Hoja 2</a>
     </div>
     <p>Parrafo tipo de letra Verdana y tamaño 8</p>
