--- a/Eje6/Index.html
+++ b/Eje6/Index.html
@@ -8,7 +8,7 @@
     <title>Ejercicio 6</title>
 </head>
 <body>
-    <a href="../Index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
-    
+    <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
+
 </body>
 </html>
