--- a/Eje5/index2.html
+++ b/Eje5/index2.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div>
-        <a href="../Index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
-        <a href="Index.html" style="float: right;">Hoja 1</a>
+        <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
+        <a href="index.html" style="float: right;">Hoja 1</a>
     </div>
     <p style="font-size: 10px;">Parrafo tipo de letra Verdana y tamaño 10 redefinido</p>
 </body>
