--- a/Index.html
+++ b/Index.html
@@ -12,10 +12,10 @@
     <ul>
         <li><a href="Eje1/Eje1.html">Ejercicio 1</a></li>
         <li><a href="Eje2/index.html">Ejercicio 2</a></li>
-        <li><a href="Eje3/Index.html">Ejercicio 3</a</li>
+        <li><a href="Eje3/index.html">Ejercicio 3</a</li>
         <li><a href="Eje4/index.html">Ejercicio 4</a></li>
-        <li><a href="Eje5/Index.html">Ejercicio 5</a></li>
-        <li><a href="Eje6/Index.html">Ejercicio 6</a></li>
+        <li><a href="Eje5/index.html">Ejercicio 5</a></li>
+        <li><a href="Eje6/index.html">Ejercicio 6</a></li>
     </ul>
 </body>
 </html>
