--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="EstiloIndice.css">
+    <link rel="stylesheet" href="EstiloIni.css">
     <title>Index</title>
 </head>
 <body>
-    <h1 style="text-align: center;">Trabajo practico</h1>
+    <h1 class="Ini">Trabajo practico</h1>
     <ul>
-        <li><a href="Eje1/Eje1.html">Ejercicio 1</a></li>
+        <li><a href="Eje1/index.html">Ejercicio 1</a></li>
         <li><a href="Eje2/index.html">Ejercicio 2</a></li>
         <li><a href="Eje3/index.html">Ejercicio 3</a</li>
         <li><a href="Eje4/index.html">Ejercicio 4</a></li>
