Retoque division cambio de web y retorno

--- a/Eje1/index.html
+++ b/Eje1/index.html
@@ -6,7 +6,9 @@
     <title>Ejercicio 1</title>
 </head>
 <body>
-    <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
+    <div class="test">
+        <a href="../index.html" class="IniA"><img src="../regresar.jpg" alt="Inicio" class="IniImg"></a>
+    </div>
     <h1 class="TextoRojo">Titulo 1</h1>
     <h2>SubTitulo</h2>
     <h3 class="TextoRojo">Sub-SubTitulo</h3>
