--- a/Eje2/index.html
+++ b/Eje2/index.html
@@ -6,7 +6,9 @@
     <title>Ejercicio 2</title>
 </head>
 <body>
-    <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
+    <div class="test">
+        <a href="../index.html" class="IniA"><img src="../regresar.jpg" alt="Inicio" class="IniImg"></a>
+    </div>
     <h1>Titulo</h1>
     <p>Esto es un parrafo</p>
 </body>
