--- a/Eje3/index.html
+++ b/Eje3/index.html
@@ -8,7 +8,9 @@
     <title>Ejercicio 3</title>
 </head>
 <body>
-    <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
+    <div class="test">
+        <a href="../index.html" class="IniA"><img src="../regresar.jpg" alt="Inicio" class="IniImg"></a>
+    </div>
     <h1>Esto es un titulo</h1>
     <p>Esto es un parrado</p>
 </body>
