--- a/Eje4/index.html
+++ b/Eje4/index.html
@@ -8,7 +8,9 @@
     <title>Ejercicio 4</title>
 </head>
 <body>
-    <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
+    <div class="test">
+        <a href="../index.html" class="IniA"><img src="../regresar.jpg" alt="Inicio" class="IniImg"></a>
+    </div>
     <h1>h1</h1>
     <h2>h2</h2>
     <h3>h3</h3>
