--- a/Eje5/index2.html
+++ b/Eje5/index2.html
@@ -8,9 +8,9 @@
     <title>Ejercicio 5- Hoja 2</title>
 </head>
 <body>
-    <div>
-        <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
-        <a href="index.html" style="float: right;">Hoja 1</a>
+    <div class="test">
+        <a href="../index.html" class="IniA"><img src="../regresar.jpg" alt="Inicio" class="IniImg"></a>
+        <a href="index.html" class="Cambio">Hoja 1</a>
     </div>
     <p style="font-size: 10px;">Parrafo tipo de letra Verdana y tamaño 10 redefinido</p>
 </body>
