--- a/Eje6/index.html
+++ b/Eje6/index.html
@@ -8,7 +8,12 @@
     <title>Ejercicio 6</title>
 </head>
 <body>
-    <a href="../index.html"><img src="../regresar.jpg" alt="Inicio" class="Inicio"></a>
-
+    <div class="test">
+        <a href="../index.html" class="IniA"><img src="../regresar.jpg" alt="Inicio" class="IniImg"></a>
+        <a href="index2.html" class="Cambio">Hoja 2</a>
+    </div>
+    <h1>TITULO H1 PAGINA 1</h1>
+    <H2>TITULO H2 PAGINA 1</H2>
+    <P>PARRAFO PAGINA 1</P>
 </body>
 </html>
