--- a/Eje6/index2.html
+++ b/Eje6/index2.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Estilo.css">
-    <title>Ejercicio 5- Hoja 1</title>
+    <title>Ejercicio 6</title>
 </head>
 <body>
     <div class="test">
         <a href="../index.html" class="IniA"><img src="../regresar.jpg" alt="Inicio" class="IniImg"></a>
-        <a href="index2.html" class="Cambio">Hoja 2</a>
+        <a href="index.html" class="Cambio">Hoja 1</a>
     </div>
-    <p>Parrafo tipo de letra Verdana y tamaño 8</p>
+    <h1>TITULO H1 PAGINA 2</h1>
+    <H2>TITULO H2 PAGINA 2</H2>
+    <P>PARRAFO PAGINA 2</P>
 </body>
 </html>
