Por iniciar eje7

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="EstiloIni.css">
-    <title>Index</title>
+    <title>Trabajo Practico CSS</title>
 </head>
 <body>
     <h1 class="Ini">Trabajo practico</h1>
