--- a/Eje8/index.html
+++ b/Eje8/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Estilo.css">
-    <title>Ejercicio 7</title>
+    <title>Document</title>
 </head>
 <body>
     <div class="test">
         <a href="../index.html" class="IniA"><img src="../regresar.jpg" alt="Inicio" class="IniImg"></a>
     </div>
-    <h1 class="titulounic">Titulo h1</h1>
-    <p class="parrafounic">Esto es un parrafo</p>
+    <ul>
+        <li>Auto</li>
+        <li>Moto</li>
+        <li>Camioneta</li>
+    </ul>
 </body>
 </html>
