--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <li><a href="Eje4/index.html">Ejercicio 4</a></li>
         <li><a href="Eje5/index.html">Ejercicio 5</a></li>
         <li><a href="Eje6/index.html">Ejercicio 6</a></li>
+        <li><a href="Eje7/index.html">Ejercicio 7</a></li>
+        <li><a href="Eje8/index.html">Ejercicio 8</a></li>
     </ul>
 </body>
 </html>
