--- a/Eje8/index.html
+++ b/Eje8/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Estilo.css">
-    <title>Document</title>
+    <title>Ejercicio 8</title>
 </head>
 <body>
     <div class="test">
         <a href="../index.html" class="IniA"><img src="../regresar.jpg" alt="Inicio" class="IniImg"></a>
     </div>
     <ul>
+        <li>Camioneta</li>
         <li>Auto</li>
         <li>Moto</li>
-        <li>Camioneta</li>
     </ul>
 </body>
 </html>
