--- a/Eje9/index.html
+++ b/Eje9/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Estilo.css">
     <title>Ejercicio 9</title>
 </head>
 <body>
-    
+    <div class="test">
+        <a href="../index.html" class="IniA"><img src="../regresar.jpg" alt="Inicio" class="IniImg"></a>
+    </div>
+    <table>
+        <tr>
+            <th>NOMBRE Y APELLIDO</th>
+            <th>FECHA DE NACIMENTO</th>
+            <th>DOCUMENTO</th>
+        </tr>
+        <tr>
+            <td>Carlos Jesus Diaz</td>
+            <td>13/09/1990</td>
+            <td>34756374</td>
+        </tr>
+        <tr>
+            <td>Pablo Emanuel Soloa</td>
+            <td>04/12/2001</td>
+            <td>38764654</td>
+        </tr>
+    </table>
 </body>
 </html>
