--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="Eje6/index.html">Ejercicio 6</a></li>
         <li><a href="Eje7/index.html">Ejercicio 7</a></li>
         <li><a href="Eje8/index.html">Ejercicio 8</a></li>
+        <li><a href="Eje9/index.html">Ejercicio 9</a></li>
     </ul>
 </body>
 </html>
